tests are perfomed on memory